--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 *.userosscache
 *.sln.docstates
 
+# dependencies
+/node_modules/@types
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
