--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
-      "target": "ES6",
-      "module": "commonjs"
+    "target": "ES6",
+    "module": "commonjs",
+    "outDir": "./lib",
+    "rootDir": "./src",
   },
   "exclude": [
       "node_modules"
