--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aks-set-context-action",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "main": "lib/login.js",
   "scripts": {
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "typed-rest-client": "^1.5.0"
+    "@azure-actions/auth": "0.0.2",
+    "@azure-actions/utilities": "0.0.2"
   },
   "devDependencies": {
     "@types/node": "^12.0.4"
