Added changes to support non admin users

--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: 'AKS Cluster Name'
     required: false
     default: ''
+  use-admin-role:
+    description: 'Gets the accessProfile for the clusterAdmin role of the managed cluster if set as true.If set to false, it gets the access profile for the clusterUser role'
+    required: false
+    default: true
 branding:
   color: 'green' # optional, decorates the entry in the GitHub Marketplace
 runs:
