--- a/.github/workflows/defaultLabels.yml
+++ b/.github/workflows/defaultLabels.yml
@@ -2,29 +2,29 @@ name: setting-default-labels
 
 on:
   schedule:
-  - cron: "0 0/3 * * *"
+    - cron: "0 0/3 * * *"
 
 jobs:
   label-issues:
     runs-on: ubuntu-latest
-    steps:          
+    steps:
       - uses: actions/stale@v3
         name: Setting issue as idle
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-issue-message: 'This issue is idle because it has been open for 14 days with no activity.'
-          stale-issue-label: 'idle'
+          stale-issue-message: "This issue is idle because it has been open for 14 days with no activity."
+          stale-issue-label: "idle"
           days-before-stale: 14
           days-before-close: -1
           operations-per-run: 100
-          exempt-issue-labels: 'backlog'
-          
+          exempt-issue-labels: "backlog"
+
       - uses: actions/stale@v3
         name: Setting PR as idle
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-pr-message: 'This PR is idle because it has been open for 14 days with no activity.'
-          stale-pr-label: 'idle'
+          stale-pr-message: "This PR is idle because it has been open for 14 days with no activity."
+          stale-pr-label: "idle"
           days-before-stale: 14
           days-before-close: -1
           operations-per-run: 100
