--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
   "compilerOptions": {
-      "target": "ES6",
-      "module": "commonjs",
-      "rootDir": "./src",
-      "outDir": "./lib"
+    "target": "ES6",
+    "module": "commonjs",
+    "rootDir": "./src",
+    "outDir": "./lib"
   },
-  "exclude": [
-      "node_modules",
-      "__tests__"
-  ]
+  "exclude": ["node_modules", "tests", "**/*.test.ts"]
 }
