--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "@azure-actions/auth": "0.0.2",
-    "@azure-actions/utilities": "0.0.2"
+    "@actions/exec": "^1.1.0",
+    "@actions/io": "^1.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.2",
     "@types/node": "^12.0.4",
     "jest": "^25.5.4",
-    "@types/jest": "^25.2.2",
     "ts-jest": "^25.5.1",
     "typescript": "3.9.2"
   }
