Responding to comments.

--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ inputs:
     description: "Get cluster admin credentials. Values: true or false"
     default: false
     required: false
+  use-kubelogin:
+    description: "Enables kubelogin for non-admin user scenario. Values: true or false"
+    default: false
+    required: false
 branding:
   color: "green"
 runs:
