--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^25.2.2",
     "@types/node": "^12.0.4",
     "jest": "^25.5.4",
+    "prettier": "2.7.1",
     "ts-jest": "^25.5.1",
     "typescript": "3.9.2"
   }
