--- a/.github/workflows/prettify-code.yml
+++ b/.github/workflows/prettify-code.yml
@@ -1,16 +1,14 @@
 name: "Run prettier"
-on: # rebuild any PRs and main branch changes
+on:
   pull_request:
     branches:
       - main
-      - "releases/*"
   push:
     branches:
       - main
-      - "releases/*"
 
 jobs:
-  build: # make sure build/ci works properly
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
@@ -18,5 +16,5 @@ jobs:
 
       - name: Prettify code
         uses: actionsx/prettier@v2
-        run: |
-          npx prettier --check 'src/*'
+        with: 
+          args: --check
