--- a/.github/workflows/prettify-code.yml
+++ b/.github/workflows/prettify-code.yml
@@ -1,20 +1,18 @@
-name: "Run prettier"
+name: "Run prettify"
 on:
   pull_request:
-    branches:
-      - main
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  build:
+  prettier:
+    name: Prettier Check
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repo
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Prettify code
+      - name: Enforce Prettier
         uses: actionsx/prettier@v2
         with: 
-          args: --check
+          args: -- check .
