--- a/action.yml
+++ b/action.yml
@@ -1,26 +1,26 @@
-name: "Azure Kubernetes set context"
-description: "Sets the kubeconfig on the machine to communicate with the Azure Kubernetes cluster."
+name: 'Azure Kubernetes set context'
+description: 'Sets the kubeconfig on the machine to communicate with the Azure Kubernetes cluster.'
 # Azure/login must be run before this action
 inputs:
-  resource-group:
-    description: "Resource Group Name"
-    required: true
-  cluster-name:
-    description: "AKS Cluster Name"
-    required: true
-  subscription:
-    description: "AKS Cluster Subscription"
-    required: false
-  admin:
-    description: "Get cluster admin credentials. Values: true or false"
-    default: false
-    required: false
-  use-kubelogin:
-    description: "Enables kubelogin for non-admin user scenario. Values: true or false"
-    default: false
-    required: false
+   resource-group:
+      description: 'Resource Group Name'
+      required: true
+   cluster-name:
+      description: 'AKS Cluster Name'
+      required: true
+   subscription:
+      description: 'AKS Cluster Subscription'
+      required: false
+   admin:
+      description: 'Get cluster admin credentials. Values: true or false'
+      default: false
+      required: false
+   use-kubelogin:
+      description: 'Enables kubelogin for non-admin user scenario. Values: true or false'
+      default: false
+      required: false
 branding:
-  color: "green"
+   color: 'green'
 runs:
-  using: "node16"
-  main: "lib/index.js"
+   using: 'node16'
+   main: 'lib/index.js'
