--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "aks-set-context-action",
-  "version": "0.0.1",
-  "private": true,
-  "main": "lib/login.js",
-  "scripts": {
-    "build": "tsc --outDir ./lib --rootDir ./src",
-    "test": "jest",
-    "test-coverage": "jest --coverage"
-  },
-  "keywords": [
-    "actions",
-    "node",
-    "setup"
-  ],
-  "author": "GitHub",
-  "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.1.0",
-    "@actions/io": "^1.1.1"
-  },
-  "devDependencies": {
-    "@types/jest": "^25.2.2",
-    "@types/node": "^12.0.4",
-    "jest": "^25.5.4",
-    "prettier": "2.7.1",
-    "ts-jest": "^25.5.1",
-    "typescript": "3.9.2"
-  }
+   "name": "aks-set-context-action",
+   "version": "0.0.1",
+   "private": true,
+   "main": "lib/login.js",
+   "scripts": {
+      "build": "tsc --outDir ./lib --rootDir ./src",
+      "test": "jest",
+      "test-coverage": "jest --coverage",
+      "format": "prettier --write .",
+      "format-check": "prettier --check ."
+   },
+   "keywords": [
+      "actions",
+      "node",
+      "setup"
+   ],
+   "author": "GitHub",
+   "license": "MIT",
+   "dependencies": {
+      "@actions/core": "^1.2.6",
+      "@actions/exec": "^1.1.0",
+      "@actions/io": "^1.1.1"
+   },
+   "devDependencies": {
+      "@types/jest": "^25.2.2",
+      "@types/node": "^12.0.4",
+      "jest": "^25.5.4",
+      "prettier": "2.7.1",
+      "ts-jest": "^25.5.1",
+      "typescript": "3.9.2"
+   }
 }
