--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "private": true,
    "main": "lib/login.js",
    "scripts": {
-      "build": "tsc --outDir ./lib --rootDir ./src",
+      "build": "ncc build src/run.ts -o lib",
       "test": "jest",
       "test-coverage": "jest --coverage",
       "format": "prettier --write .",
@@ -25,6 +25,7 @@
    "devDependencies": {
       "@types/jest": "^25.2.2",
       "@types/node": "^12.0.4",
+      "@vercel/ncc": "^0.34.0",
       "jest": "^25.5.4",
       "prettier": "2.7.1",
       "ts-jest": "^25.5.1",
