--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
    "dependencies": {
       "@actions/core": "^1.2.6",
       "@actions/exec": "^1.1.0",
-      "@actions/io": "^1.1.1"
+      "@actions/io": "^1.1.1",
+      "@actions/tool-cache": "^2.0.1",
+      "@octokit/core": "^3.6.0",
+      "@octokit/plugin-retry": "^3.0.9"
    },
    "devDependencies": {
       "@types/jest": "^25.2.2",
