--- a/.github/ISSUE_TEMPLATE/issueForm.yml
+++ b/.github/ISSUE_TEMPLATE/issueForm.yml
@@ -1,59 +1,59 @@
 name: Bug Report
 description: File a bug report
-title: "Bug: "
-labels: ["bug", "triage"]
+title: 'Bug: '
+labels: ['bug', 'triage']
 assignees:
-  - @Azure/aks-atlanta
+   - Azure/aks-atlanta
 body:
-  - type: markdown
-    attributes:
-      value: |
-        Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: email@example.com
-    validations:
-      required: false
-  - type: textarea
-    id: what-happened
-    attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-    validations:
-      required: true
-  - type: textarea
-    id: version
-    attributes:
-      label: Version
-      description: What action version are you running?
-      placeholder: Mention the action version, runner or any other information
-    validations:
-      required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct]()
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+   - type: markdown
+     attributes:
+        value: |
+           Thanks for taking the time to fill out this bug report!
+   - type: input
+     id: contact
+     attributes:
+        label: Contact Details
+        description: How can we get in touch with you if we need more info?
+        placeholder: email@example.com
+     validations:
+        required: false
+   - type: textarea
+     id: what-happened
+     attributes:
+        label: What happened?
+        description: Also tell us, what did you expect to happen?
+        placeholder: Tell us what you see!
+     validations:
+        required: true
+   - type: textarea
+     id: version
+     attributes:
+        label: Version
+        description: What action version are you running?
+        placeholder: Mention the action version, runner or any other information
+     validations:
+        required: true
+   - type: dropdown
+     id: browsers
+     attributes:
+        label: What browsers are you seeing the problem on?
+        multiple: true
+        options:
+           - Firefox
+           - Chrome
+           - Safari
+           - Microsoft Edge
+   - type: textarea
+     id: logs
+     attributes:
+        label: Relevant log output
+        description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+        render: shell
+   - type: checkboxes
+     id: terms
+     attributes:
+        label: Code of Conduct
+        description: By submitting this issue, you agree to follow our [Code of Conduct]()
+        options:
+           - label: I agree to follow this project's Code of Conduct
+             required: true
