--- a/.github/ISSUE_TEMPLATE/featureRequestForam.yml
+++ b/.github/ISSUE_TEMPLATE/featureRequestForam.yml
@@ -1,16 +1,16 @@
-name: Bug Report
-description: File a bug report, we will respond to this thread with any questions.
-title: 'Bug: '
-labels: ['bug', 'triage']
+name: Feature Request
+description: File a Feature Request form, we will respond to this thread with any questions.
+title: 'Feature Request: '
+labels: ['Feature', 'Functionality']
 assignees:
-   - Azure/aks-atlanta
+   - azure/aks-atlanta
 body:
    - type: input
-     id: what-happened
+     id: feature request
      attributes:
-        label: what happened?
-        description: also tell us what did you expect to happen?
-        placeholder: tell us what you see!
+        label: feature request
+        description: also tell us the example functionality and links to relevant docs
+        placeholder: tell us more!
      validations:
         required: true
    - type: input
@@ -29,12 +29,6 @@ body:
         placeholder: mention the runner(self-hosted, operating system)
      validations:
         required: true
-   - type: input
-     id: logs
-     attributes:
-        label: relevant log output
-        description: run in debug mode for the most verbose logs. Please feel free to attach a screenshot of the logs
-        render: shell
    - type: checkboxes
      id: terms
      attributes:
