added the runner info

--- a/.github/ISSUE_TEMPLATE/featureRequestForm.yml
+++ b/.github/ISSUE_TEMPLATE/featureRequestForm.yml
@@ -11,3 +11,11 @@ body:
         description: also tell us the example functionality and links to relevant docs
      validations:
         required: true
+   - type: input
+     id: runner
+     attributes:
+        label: runner
+        description: what runner are you using?
+        placeholder: mention the runner info (self-hosted, operating system)
+     validations:
+        required: true
