--- a/.github/ISSUE_TEMPLATE/bugReportForm.yml
+++ b/.github/ISSUE_TEMPLATE/bugReportForm.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: File a bug report, we will respond to this thread with any questions.
+description: File a bug report specifying all inputs you provided for the action, we will respond to this thread with any questions.
 title: 'Bug: '
 labels: ['bug', 'triage']
 assignees: '@Azure/aks-atlanta'
@@ -8,9 +8,16 @@ body:
      id: What-happened
      attributes:
         label: What happened?
-        description: Tell us what happened and how is it different form the expected?
+        description: Tell us what happened and how is it different from the expected?
         placeholder: Tell us what you see!
      validations:
+        required: true
+   - type: checkboxes
+     id: Version
+     attributes:
+        label: Version
+     options:
+        label: I am using the latest version
         required: true
    - type: input
      id: Runner
@@ -26,3 +33,5 @@ body:
         label: Relevant log output
         description: Run in debug mode for the most verbose logs. Please feel free to attach a screenshot of the logs
         render: shell
+     validations:
+        required: true
