--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
    "license": "MIT",
    "dependencies": {
       "@actions/core": "^1.10.0",
-      "@actions/exec": "^1.1.0",
-      "@actions/io": "^1.1.1",
-      "crypto": "^1.0.1"
+      "@actions/exec": "^1.1.1",
+      "@actions/io": "^1.1.1"
    },
    "devDependencies": {
       "@types/jest": "^25.2.2",
