--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "private": true,
    "main": "lib/login.js",
    "scripts": {
-      "build": "ncc build src/run.ts -o lib",
+      "build": "ncc build src/index.ts -o lib",
       "test": "jest",
       "test-coverage": "jest --coverage",
       "format": "prettier --write .",
