--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
    "dependencies": {
       "@actions/core": "^1.10.0",
       "@actions/exec": "^1.1.0",
-      "@actions/io": "^1.1.1",
-      "crypto": "^1.0.1"
+      "@actions/io": "^1.1.1"
    },
    "devDependencies": {
       "@types/jest": "^25.2.2",
