--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "private": true,
    "main": "lib/login.js",
    "scripts": {
+      "prebuild": "npm i @vercel/ncc",
       "build": "ncc build src/index.ts -o lib",
       "test": "jest",
       "test-coverage": "jest --coverage",
