--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
       "@actions/io": "^1.1.1"
    },
    "devDependencies": {
-      "@types/jest": "^25.2.2",
-      "@types/node": "^12.0.4",
-      "@vercel/ncc": "^0.34.0",
-      "jest": "^26.0.0",
-      "prettier": "2.7.1",
-      "ts-jest": "^26.0.0",
-      "typescript": "3.9.2"
+      "@types/jest": "^29.5.11",
+      "@types/node": "^20.11.8",
+      "@vercel/ncc": "^0.38.1",
+      "jest": "^29.7.0",
+      "prettier": "^3.2.5",
+      "ts-jest": "^29.2.5",
+      "typescript": "^5.3.3"
    }
 }
