--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
    "license": "MIT",
    "dependencies": {
       "@actions/core": "^1.11.1",
-      "@actions/exec": "^1.1.0",
-      "@actions/io": "^1.1.1"
+      "@actions/exec": "^1.1.1",
+      "@actions/io": "^1.1.3",
+      "crypto": "^1.0.1",
+      "fs": "^0.0.1-security",
+      "path": "^0.12.7"
    },
    "devDependencies": {
       "@types/jest": "^29.5.14",
-      "@types/node": "^22.8.7",
+      "@types/node": "^22.9.1",
       "@vercel/ncc": "^0.38.2",
       "jest": "^29.7.0",
       "prettier": "^3.2.5",
