--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
       "rootDir": "./src",
       "outDir": "./lib"
    },
+   "include": ["src/**/*.ts"],
    "exclude": ["node_modules", "tests", "**/*.test.ts"]
 }
