--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
    "compilerOptions": {
-      "target": "ES6",
+      "target": "ES2020",
       "module": "commonjs",
+      "moduleResolution": "node",
+      "allowSyntheticDefaultImports": true,
+      "esModuleInterop": true,
       "rootDir": "./src",
       "outDir": "./lib"
    },
