--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
    "scripts": {
       "prebuild": "npm i @vercel/ncc",
       "build": "ncc build src/index.ts -o lib",
-      "test": "jest",
-      "test-coverage": "jest --coverage",
+      "test": "node --experimental-vm-modules ./node_modules/.bin/jest",
+      "test-coverage": "node --experimental-vm-modules ./node_modules/.bin/jest --coverage",
       "format": "prettier --write .",
       "format-check": "prettier --check .",
       "prepare": "husky"
@@ -26,9 +26,13 @@
       "husky": "^9.1.7"
    },
    "devDependencies": {
+      "@babel/core": "^7.29.0",
+      "@babel/preset-env": "^7.29.0",
+      "@jest/globals": "^30.2.0",
       "@types/jest": "^30.0.0",
       "@types/node": "^25.2.0",
       "@vercel/ncc": "^0.38.4",
+      "babel-jest": "^30.2.0",
       "jest": "^30.2.0",
       "prettier": "^3.8.1",
       "ts-jest": "^29.4.6",
