--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
    "compilerOptions": {
       "target": "ES2020",
-      "module": "commonjs",
+      "module": "ESNext",
       "moduleResolution": "node",
       "allowSyntheticDefaultImports": true,
       "esModuleInterop": true,
       "rootDir": "./src",
       "outDir": "./lib"
    },
-   "exclude": ["node_modules", "tests", "**/*.test.ts"]
+   "exclude": ["node_modules", "tests", "**/*.test.ts"],
+   "ts-node": {
+      "esm": true
+   }
 }
