--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
    "scripts": {
       "prebuild": "npm i @vercel/ncc",
       "build": "ncc build src/index.ts -o lib",
-      "test": "jest",
-      "test-coverage": "jest --coverage",
+      "test": "vitest run",
+      "test-coverage": "vitest run --coverage",
       "format": "prettier --write .",
       "format-check": "prettier --check .",
       "prepare": "husky"
@@ -26,12 +26,11 @@
       "husky": "^9.1.7"
    },
    "devDependencies": {
-      "@types/jest": "^30.0.0",
       "@types/node": "^25.0.9",
       "@vercel/ncc": "^0.38.4",
-      "jest": "^30.2.0",
       "prettier": "^3.8.0",
-      "ts-jest": "^29.4.6",
-      "typescript": "^5.9.3"
+      "typescript": "^5.9.3",
+      "vitest": "^1.6.1",
+      "@vitest/coverage-v8": "^1.6.1"
    }
 }
