--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,7 +10,24 @@ on: # rebuild any PRs and main branch changes
          - 'releases/*'
 
 jobs:
-   build: # make sure build/ci works properly
+   build:
+      runs-on: ubuntu-latest
+      steps:
+         - uses: actions/checkout@v6
+
+         - name: Install dependencies
+           run: npm ci
+
+         - name: Build bundle
+           run: npm run build
+
+         - name: Upload bundle artifact
+           uses: actions/upload-artifact@v4
+           with:
+              name: action-bundle
+              path: lib/index.js
+
+   unit-tests:
       runs-on: ubuntu-latest
       steps:
          - uses: actions/checkout@v6
@@ -19,3 +36,18 @@ jobs:
            run: |
               npm install
               npm test
+
+   integration-tests:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+         - uses: actions/checkout@v6
+
+         - name: Download bundle artifact
+           uses: actions/download-artifact@v4
+           with:
+              name: action-bundle
+              path: lib
+
+         - name: Run integration test
+           run: node scripts/integration-test.mjs
